# waveforms-sdk

./: Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
src/: enums.rs  lib.rs  macros.rs  tests.rs
src/analog/: gen.rs  mod.rs  scope.rs
src/digital/: analyzer.rs  gen.rs  mod.rs  protocols.rs
